--- a/fronted/app/src/main/res/layout/activity_auth.xml
+++ b/fronted/app/src/main/res/layout/activity_auth.xml
@@ -24,6 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LogIn"/>
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BTN"/>
 
     <TextView
         android:id="@+id/textViewRegister"
