--- a/fronted/app/src/main/res/layout/activity_home.xml
+++ b/fronted/app/src/main/res/layout/activity_home.xml
@@ -10,4 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BTN"/>
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hola"
+        />
 </LinearLayout>
