--- a/fronted/app/src/main/res/layout/resource_item_products.xml
+++ b/fronted/app/src/main/res/layout/resource_item_products.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="20dp"
+    >
 
     <ImageView
         android:id="@+id/img"
@@ -16,11 +18,12 @@
     
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="Name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
     <TextView
         android:id="@+id/tvPrice"
@@ -32,10 +35,11 @@
         tools:ignore="MissingConstraints" />
     <TextView
         android:id="@+id/tvDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="Description"
+        tools:text="Some description of product"
         app:layout_constraintTop_toBottomOf="@+id/tvPrice"
         app:layout_constraintStart_toEndOf="@+id/img"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
