--- a/fronted/app/src/main/res/layout/activity_home.xml
+++ b/fronted/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    >
     <Button
         android:id="@+id/btn"
         android:layout_width="wrap_content"
@@ -14,7 +15,12 @@
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOGIN"/>
+        android:text="CREAR ORDEN"/>
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"/>
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
