--- a/fronted/app/src/main/res/layout/activity_home.xml
+++ b/fronted/app/src/main/res/layout/activity_home.xml
@@ -42,9 +42,14 @@
         android:maxLines="1"
         android:minHeight="48dp"
         android:singleLine="true" />
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProducts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </LinearLayout>
