--- a/fronted/app/src/main/res/layout/activity_home.xml
+++ b/fronted/app/src/main/res/layout/activity_home.xml
@@ -10,30 +10,54 @@
         android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text="BTN"/>
     <Button
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text="CREAR ORDEN"/>
     <Button
         android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text="Login"/>
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tema"
+        android:visibility="gone"
         />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mode"
+        android:visibility="gone"
         />
-
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:scrollbars="none"
+        android:paddingHorizontal="20px"
+        android:layout_height="wrap_content">
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup"
+            app:singleSelection="true"
+            app:singleLine="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.chip.Chip
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.Chip.Filter"
+                android:text=" Todo "
+                android:checked="true"
+                />
+        </com.google.android.material.chip.ChipGroup>
+    </HorizontalScrollView>
     <EditText
         android:id="@+id/etSearch"
         android:layout_width="match_parent"
