--- a/fronted/app/src/main/res/values/colors.xml
+++ b/fronted/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_light">#5DADE2</color>
+    <color name="orange">#FF7617</color>
+    <color name="background">#EEEEEE</color>
+    <color name="primary_color">#55BBAF</color>
+    <color name="secondary_color">#50C2C9</color>
 </resources>
