--- a/fronted/app/src/main/res/values/colors.xml
+++ b/fronted/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="background">#EEEEEE</color>
     <color name="primary_color">#55BBAF</color>
     <color name="secondary_color">#50C2C9</color>
+    <color name="primary_color_dark">#3B7F7B</color>
+    <color name="secondary_color_dark">#29778B</color>
 </resources>
