--- a/fronted/app/src/main/res/layout/activity_login.xml
+++ b/fronted/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_below="@id/shape1"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/poppinssemibold"
-        android:text="Welcome Back!"
+        android:text="¡Bienvenido de Vuelta!"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginTop="-15dp"
@@ -64,7 +64,7 @@
             android:background="@drawable/button_shape"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Enter your email"
+            android:hint="Ingrese su Correo"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
@@ -78,7 +78,7 @@
             android:background="@drawable/button_shape"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Confirm Password"
+            android:hint="Confirme Contraseña"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
@@ -93,7 +93,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-15dp"
         android:fontFamily="@font/poppinsregular"
-        android:text="Forget Password?"
+        android:text="¿Olvidaste constraseña?"
         android:textColor="@color/secondary_color"
         android:textSize="13dp"
         tools:ignore="TextSizeCheck" />
@@ -129,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsregular"
-            android:text="Not have an account?"
+            android:text="¿No tienes una cuenta?"
             android:textColor="@color/black"
             android:textSize="12dp"
             tools:ignore="TextSizeCheck" />
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsregular"
-            android:text="Register"
+            android:text="Registrarse"
             android:textColor="@color/secondary_color"
             android:textSize="12dp"
             tools:ignore="TextSizeCheck" />
