--- a/fronted/app/src/main/res/layout/activity_register.xml
+++ b/fronted/app/src/main/res/layout/activity_register.xml
@@ -32,7 +32,7 @@
         android:layout_below="@id/shape1"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/poppinssemibold"
-        android:text="Welcome Onboard!"
+        android:text="¡Bienvenido a bordo!"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginTop="-15dp"
@@ -46,7 +46,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/poppinsregular"
-        android:text="Let’s help you meet up your tasks."
+        android:text="Vamos a ayudarte a cumplir con tus tareas."
         android:textColor="@color/black"
         android:textSize="12dp"
         tools:ignore="TextSizeCheck" />
@@ -67,7 +67,7 @@
             android:background="@drawable/button_shape"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Enter your full name"
+            android:hint="Ingrese su nombre completo"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
@@ -81,7 +81,7 @@
             android:background="@drawable/button_shape"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Enter your email"
+            android:hint="Ingrese su correo"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
@@ -95,7 +95,7 @@
             android:background="@drawable/button_shape"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Create Password"
+            android:hint="Crear Contraseña"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
@@ -109,7 +109,7 @@
             android:background="@drawable/button_shape"
             android:backgroundTint="@color/white"
             android:fontFamily="@font/poppinsregular"
-            android:hint="Confirm Password"
+            android:hint="Confirmar Contraseña"
             android:paddingLeft="15dp"
             android:textColor="@color/black"
             android:textSize="14dp"
@@ -148,7 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsregular"
-            android:text="Already have an account?"
+            android:text="¿Ya tienes una cuenta?"
             android:textColor="@color/black"
             android:textSize="12dp"
             tools:ignore="TextSizeCheck" />
