--- a/fronted/app/src/main/res/layout/activity_main.xml
+++ b/fronted/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/poppinssemibold"
-        android:text="Get things done with TODo"
+        android:text="Obtén lo que buscas con Muebles Solecito"
         android:textColor="@color/black"
         android:textSize="18sp" />
 
