Problema del menu lateral solucionado

--- a/fronted/app/src/main/res/values/colors.xml
+++ b/fronted/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="primary_color_dark">#3B7F7B</color>
     <color name="secondary_color_dark">#29778B</color>
     <color name="gray">#A2ACB8</color>
+    <color name="lavanda">#8692f7</color>
 </resources>
