--- a/fronted/app/src/main/res/menu/activity_home_drawer.xml
+++ b/fronted/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group>
-
-    </group>
+    <item
+        android:id="@+id/item1"
+        android:icon="@drawable/baseline_home_24"
+        android:title="Home"
+        />
+    <item
+        android:id="@+id/item2"
+        android:icon="@drawable/baseline_person_pin_24"
+        android:title="Profile"
+        />
+    <item
+        android:id="@+id/item3"
+        android:icon="@drawable/baseline_shopping_cart_24"
+        android:title="Profile"
+        />
 </menu>
