--- a/fronted/app/src/main/res/layout/fragment_shopping.xml
+++ b/fronted/app/src/main/res/layout/fragment_shopping.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
+    android:paddingBottom="25dp"
+    android:orientation="vertical"
     tools:context=".ShoppingFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    <Button
+        android:id="@+id/btnComprar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Finalizar compra"/>
     <TextView
+        android:id="@+id/tvReport"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:textSize="10pt"
+        android:gravity="center"
+        android:padding="20px"
+        android:visibility="gone"
+        android:text="Aún no ha añadido nada al carrito"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvOrder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+
+</LinearLayout>
