--- a/fronted/app/src/main/res/layout/resource_item_products.xml
+++ b/fronted/app/src/main/res/layout/resource_item_products.xml
@@ -121,6 +121,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <Button
+            android:id="@+id/agregar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_shape"
