--- a/fronted/app/src/main/res/layout/activity_home.xml
+++ b/fronted/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".HomeActivity">
+tools:context=".ui.HomeActivity">
 <Button
     android:id="@+id/btn"
     android:layout_width="wrap_content"
