--- a/fronted/app/src/main/res/layout/activity_offl_line.xml
+++ b/fronted/app/src/main/res/layout/activity_offl_line.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OfflLineActivity"
+    tools:context=".ui.OfflLineActivity"
     android:background="@color/primary_color">
     <RelativeLayout
         android:layout_width="match_parent"
