--- a/fronted/app/src/main/res/layout/fragment_about.xml
+++ b/fronted/app/src/main/res/layout/fragment_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/background"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <ImageView
         android:id="@+id/shape1"
@@ -49,7 +49,7 @@
         android:textColor="@color/black" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text2"
