--- a/fronted/app/src/main/res/layout/fragment_home.xml
+++ b/fronted/app/src/main/res/layout/fragment_home.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="25dp"
-    tools:context=".HomeFragment">
+    tools:context=".ui.HomeFragment">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeActivity">
+        tools:context=".ui.HomeActivity">
         <Button
             android:id="@+id/btn"
             android:layout_width="wrap_content"
