--- a/fronted/app/src/main/res/layout/nav_header.xml
+++ b/fronted/app/src/main/res/layout/nav_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_header"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="176dp"
@@ -15,17 +16,19 @@
         android:src="@drawable/baseline_person_pin_24"/>
 
     <TextView
+        android:id="@+id/header_fullName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jonathan Nicolas"
+        android:text="Mi nombre"
         android:textColor="@color/white"
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/header_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="jonaraider4@hotmail.com"
+        android:text="mi correo"
         android:textColor="@color/white"
         android:textSize="14sp" />
 
