--- a/fronted/app/src/main/res/menu/bottom_menu.xml
+++ b/fronted/app/src/main/res/menu/bottom_menu.xml
@@ -8,17 +8,17 @@
         android:icon="@drawable/baseline_home_24"/>
 
     <item
-        android:id="@+id/shorts"
-        android:title="Shorts"
-        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/about"
+        android:title="Nosotros"
+        android:icon="@drawable/baseline_info_24"
         />
 
     <item
         android:title=""/>
 
     <item
-        android:id="@+id/subscriptions"
-        android:title="Subscriptions"
+        android:id="@+id/profile"
+        android:title="Perfil"
         android:icon="@drawable/baseline_person_24" />
     <item
         android:id="@+id/shopping"
